Working version of ORP+TDS.